[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,14 @@
         <div class="center text-big bold">
             Hi this is Ramasubramanian ! this is my first webapp !! 
         </div>
+        <div>
+            <ul>
+                <li>home</li>
+                <li>about myself</li>
+                <li>contact details</li>
+                <li>blog</li>
+            </ul>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
