[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,12 +11,15 @@
         <div class="center text-big bold">
             Hi this is Ramasubramanian ! this is my first webapp !! 
         </div>
+        <br>
+        <br>
+        <br>
         <div>
             <ul>
-                <li>home</li>
-                <li>about myself</li>
-                <li>contact details</li>
-                <li>blog</li>
+                <li id="menu">home</li>
+                <li id="menu">about myself</li>
+                <li id="menu">contact details</li>
+                <li id="menu">blog</li>
             </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
