[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
         <br>
         <br>
         <div>
-            <ul>
+            <ul class="center">
                 <li id="menu">home</li>
                 <li id="menu">about myself</li>
                 <li id="menu">contact details</li>
