[imad-console] Updates ui/contact.html

--- a/ui/contact.html
+++ b/ui/contact.html
@@ -1,2 +1,9 @@
+<!doctype html>
 <html>
+    <head>
+       <title>contact details</title> 
+    </head>
+    <body>
+        <p>this is  a smple text generally to validate this file </p>
+    </body>
 </html>
