[imad-console] Updates ui/blog.html

--- a/ui/blog.html
+++ b/ui/blog.html
@@ -1,2 +1,9 @@
-<hmtl>
+<!doctype html>
+<html>
+    <head>
+       <title>blog</title> 
+    </head>
+    <body>
+        <p>this is  a smple text generally to validate this file </p>
+    </body>
 </html>
