--- a/ui/index.html
+++ b/ui/index.html
@@ -17,9 +17,9 @@
         <div>
             <ul class="center">
                 <li id="menu">home</li>
-                <li id="menu">about myself</li>
-                <li id="menu">contact details</li>
-                <li id="menu">blog</li>
+                <li id="menu"><a href="/about.html">about myself</a></li>
+                <li id="menu"><a href="/contact.html">contact details</a></li>
+                <li id="menu"><a href="/blog.html">blog</a></li>
             </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
