[imad-console] Updates ui/contact.html

--- a/ui/contact.html
+++ b/ui/contact.html
@@ -2,8 +2,17 @@
 <html>
     <head>
        <title>contact details</title> 
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div>
+            <ul class="center">
+                <li id="menu"><a class="plain-link" href="/">home</a></li>
+                <li id="menu"><a class="plain-link" href="/about">about myself</a></li>
+                <li id="menu"><a class="plain-link" href="/contact">contact details</a></li>
+                <li id="menu"><a class="plain-link" href="/blog">blog</a></li>
+            </ul>
+        </div>
         <p>this is  a smple text generally to validate this file </p>
     </body>
 </html>
