--- a/ui/blog.html
+++ b/ui/blog.html
@@ -1,9 +1,18 @@
 <!doctype html>
 <html>
     <head>
-       <title>blog</title> 
+       <title>blog</title>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div>
+            <ul class="center">
+                <li id="menu"><a class="plain-link" href="/">home</a></li>
+                <li id="menu"><a class="plain-link" href="/about">about myself</a></li>
+                <li id="menu"><a class="plain-link" href="/contact">contact details</a></li>
+                <li id="menu"><a class="plain-link" href="/blog">blog</a></li>
+            </ul>
+        </div>
         <p>this is  a smple text generally to validate this file </p>
     </body>
 </html>
