--- a/ui/index.html
+++ b/ui/index.html
@@ -16,10 +16,10 @@
         <br>
         <div>
             <ul class="center">
-                <li id="menu"><a class="plain-link" href="/">home</a></li>
-                <li id="menu"><a class="plain-link" href="/about">about myself</a></li>
-                <li id="menu"><a class="plain-link" href="/contact">contact details</a></li>
-                <li id="menu"><a class="plain-link" href="/blog">blog</a></li>
+                <li id="menu"><a class="plain-link" href="/">Home</a></li>
+                <li id="menu"><a class="plain-link" href="/about">About Myself</a></li>
+                <li id="menu"><a class="plain-link" href="/contact">Contact Details</a></li>
+                <li id="menu"><a class="plain-link" href="/blog">Blog</a></li>
             </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
